# libsignal-client

./: SignalClient.podspec
.github/workflows/: build_and_test.yml
java/: build_jni.sh
rust/bridge/ffi/: Cargo.toml  cbindgen.toml
rust/bridge/ffi/src/: lib.rs  util.rs
rust/bridge/jni/: Cargo.toml
rust/bridge/jni/src/: lib.rs  util.rs
rust/bridge/node/: Cargo.toml
rust/bridge/node/futures/: Cargo.toml
rust/bridge/node/futures/src/: context.rs  future.rs  future_builder.rs  lib.rs  promise.rs  result.rs  util.rs
rust/bridge/node/futures/tests/: node.rs
rust/bridge/node/futures/tests-node-module/: Cargo.toml  build.rs
rust/bridge/node/futures/tests-node-module/src/: lib.rs  panics_and_throws.rs  store_like.rs
rust/bridge/node/futures/tests/node-tests/: package.json
rust/bridge/node/futures/tests/node-tests/test/: basic.js
rust/bridge/node/src/: future.rs  futures.rs  lib.rs
rust/bridge/node/src/futures/: context.rs  future.rs  result.rs
rust/bridge/shared/: Cargo.toml
rust/bridge/shared/src/: lib.rs  support_ffi.rs
rust/bridge/shared/src/jni/: mod.rs
rust/bridge/shared/src/support_ffi/: error.rs
rust/bridge/shared/src/support_jni/: error.rs  mod.rs
rust/protocol/src/: sealed_sender.rs
