#
# Copyright (C) 2020 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

# This is a separate crate so we can run the Neon build script.

[package]
name = "signal-neon-futures-tests"
version = "0.1.0"
authors = ["Jordan Rose <jrose@signal.org>"]
license = "AGPL-3.0-only"
build = "build.rs"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.0"

[dependencies]
signal-neon-futures = { path = ".." }
neon = "0.5.0"
futures = "0.3.7"
